# qmsspkg

./: pyproject.toml
.github/workflows/: build.yml  deploy.yml
qmsspkg/: CONTRIBUTING.rst  LICENSE  README.md
qmsspkg/docs/: Makefile  conf.py  installation.rst
qmsspkg/docs/_build/doctrees/: conduct.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
qmsspkg/docs/_build/doctrees/source/: modules.doctree  qmsspkg.doctree
qmsspkg/docs/_build/html/: .buildinfo  conduct.html  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
qmsspkg/docs/_build/html/_modules/: index.html
qmsspkg/docs/_build/html/_modules/qmsspkg/: qmsspkg.html
qmsspkg/docs/_build/html/_sources/: index.rst.txt  usage.rst.txt
qmsspkg/docs/_build/html/_sources/source/: modules.rst.txt  qmsspkg.rst.txt
qmsspkg/docs/_build/html/source/: modules.html  qmsspkg.html
qmsspkg/tests/: test_qmsspkg.py
