[tool.poetry]
name = "qmsspkg"
version = "0.1.1"
description = "Python package that eases the pain of concatenating Pandas categoricals!"
authors = ["Thomas Brambor <tbrambor@gmail.com>"]
license = "MIT"
readme = "qmsspkg/README.md"
documentation = 'https://qmsspkg.readthedocs.io'
homepage = "https://github.com/QMSS-G5072-2020/qmsspkg"
repository = "https://github.com/QMSS-G5072-2020/qmsspkg"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.1.4"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
sphinxcontrib-napoleon = "^0.7"
Sphinx = "^3.3.0"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
python-semantic-release = "^7.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pypkgs/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"